[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A collection of console games"
authors = ["Mikhail Egorov <pe.egorov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/MD-shka/python-project-49.git"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.braingames:main"
brain-even = "brain_games.scripts.start_game: main"
brain-calc = "brain_games.scripts.start_game:main"
brain-gcd = "brain_games.scripts.start_game:main"
brain-progression = "brain_games.scripts.start_game:main"
brain-prime = "brain_games.scripts.start_game:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
