[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A collection of console games"
authors = ["Mikhail Egorov <pe.egorov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/MD-shka/python-project-49.git"
classifiers = [
  "Environment :: Consol",
  "Programming Language :: Python :: 3.10",
  "Topic :: Games/Entertainment"
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.braingames:main"
brain-even = "brain_games.scripts.run_even: main"
brain-calc = "brain_games.scripts.run_calc:main"
brain-gcd = "brain_games.scripts.run_gcd:main"
brain-progression = "brain_games.scripts.run_progression:main"
brain-prime = "brain_games.scripts.run_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
